--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "next/core-web-vitals",
+    "next/typescript"
+  ],
+  "rules": {
+    "semi": ["error", "never"], // Disable semicolons
+    "quotes": ["error", "single"],
+    "prettier/prettier": [
+      "error",
+      {
+        "semi": false // Ensure Prettier also removes semicolons
+      }
+    ]
+  }
 }
